# my-vocode-rounded

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json
api/: environment.docker.yml  index.py  pyproject.toml
api/utils/: prompt.py
src/app/: page.tsx
src/app/api/chat/: route.ts
src/components/: chat.tsx  ping-component.tsx  vocode-app.tsx
